@@ -1289,6 +1289,16 @@ fillGaps ()
       int i;
       int pdone = 0;
 
+      if (sym->accuse == ACCUSE_SCRATCH)
+        {
+          sym->nRegs = getSize (sym->type);
+          sym->regs[0] = regsZ80 + L_IDX;
+          sym->regs[1] = regsZ80 + H_IDX;
+          sym->accuse = 0;
+          sym->isspilt = FALSE;
+          continue;
+        }
+
       if (!sym->spillA || !sym->clashes || sym->remat)
         continue;
 
@@ -1417,7 +1427,7 @@ rUmaskForOp (const operand * op)
   if (sym->isspilt || !sym->nRegs)
     return NULL;
 
-  rumask = newBitVect (_G.nRegs);
+  rumask = newBitVect (_G.nRegs + (IS_GB ? 0 : 2));
 
   for (j = 0; j < sym->nRegs; j++)
     {
@@ -1443,7 +1453,7 @@ z80_rUmaskForOp (const operand * op)
 bitVect *
 regsUsedIniCode (iCode * ic)
 {
-  bitVect *rmask = newBitVect (_G.nRegs);
+  bitVect *rmask = newBitVect (_G.nRegs + (IS_GB ? 0 : 2));
 
   /* do the special cases first */
   if (ic->op == IFX)
@@ -1507,7 +1517,7 @@ createRegMask (eBBlock ** ebbs, int count)
           /* now create the register mask for those
              registers that are in use : this is a
              super set of ic->rUsed */
-          ic->rMask = newBitVect (_G.nRegs + 1);
+          ic->rMask = newBitVect (_G.nRegs + 1 + (IS_GB ? 0 : 2));
 
           /* for all live Ranges alive at this point */
           for (j = 1; j < ic->rlive->size; j++)
@@ -2093,7 +2103,6 @@ isBitwiseOptimizable (iCode * ic)
   return FALSE;
 }
 
-// HL handled by new register allocator
 static iCode *
 packRegsForHLUse3 (iCode * lic, operand * op, eBBlock * ebp)
 {
@@ -2101,6 +2110,7 @@ packRegsForHLUse3 (iCode * lic, operand * op, eBBlock * ebp)
   symbol *sym;
   iCode *ic, *dic;
   bool isFirst = TRUE;
+  bool exstk = (currFunc && currFunc->stack > 127);
 
   D (D_PACK_HLUSE3,
      ("Checking HL on %p lic key %u first def %u line %u:\n", OP_SYMBOL (op), lic->key, bitVectFirstBit (OP_DEFS (op)),
@@ -2169,7 +2179,7 @@ packRegsForHLUse3 (iCode * lic, operand * op, eBBlock * ebp)
             continue;
         }
 
-      if (IC_RESULT (ic) && IS_SYMOP (IC_RESULT (ic)) && isOperandInDirSpace (IC_RESULT (ic)))
+      if (IC_RESULT (ic) && IS_SYMOP (IC_RESULT (ic)) && (isOperandInDirSpace (IC_RESULT (ic)) || exstk))
         return NULL;
 
       if (IC_LEFT (ic) && IS_SYMOP (IC_LEFT (ic)) && isOperandInDirSpace (IC_LEFT (ic)))
